--- a/conf/modules.config
+++ b/conf/modules.config
@@ -20,6 +20,20 @@ process {
 
     withName: FASTQC {
         ext.args = '--quiet'
+        publishDir = [
+            path: { "${params.outdir}/fastqc" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: FASTP {
+        ext.args = '--qualified_quality_phred 20 --length_required 50'
+        publishDir = [
+            path: { "${params.outdir}/fastp" },
+            mode: params.publish_dir_mode,
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
     }
 
     withName: 'MULTIQC' {
