--- a/conf/modules.config
+++ b/conf/modules.config
@@ -45,4 +45,23 @@ process {
         ]
     }
 
+    withName: 'BWAMEM2_MEM' {
+        ext.args = '-M'  // Mark shorter split hits as secondary
+        publishDir = [
+            path: { "${params.outdir}/alignment" },
+            mode: params.publish_dir_mode,
+            pattern: '*.bam',
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: 'SAMTOOLS_INDEX' {
+        publishDir = [
+            path: { "${params.outdir}/alignment" },
+            mode: params.publish_dir_mode,
+            pattern: '*.bai',
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
 }
