--- a/conf/test.config
+++ b/conf/test.config
@@ -12,7 +12,7 @@
 
 process {
     resourceLimits = [
-        cpus: 4,
+        cpus: 10,
         memory: '15.GB',
         time: '1.h'
     ]
@@ -25,6 +25,7 @@ params {
     // Input data - tumor-normal test samplesheet
     input  = "${projectDir}/assets/samplesheet_test.csv"
 
-    // Genome references
-    genome = 'GRCh38'
+    // Small chr22 reference from nf-core test-datasets (builds index on-the-fly)
+    fasta  = "https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/genome.fasta"
+    genome = null
 }
