--- a/conf/modules.config
+++ b/conf/modules.config
@@ -46,7 +46,7 @@ process {
     }
 
     withName: 'BWAMEM2_MEM' {
-        ext.args = '-M'  // Mark shorter split hits as secondary
+        ext.args = { "-M -R '@RG\\tID:${meta.id}\\tSM:${meta.id}\\tPL:ILLUMINA\\tLB:${meta.id}'" }
         publishDir = [
             path: { "${params.outdir}/alignment" },
             mode: params.publish_dir_mode,
@@ -60,6 +60,51 @@ process {
             path: { "${params.outdir}/alignment" },
             mode: params.publish_dir_mode,
             pattern: '*.bai',
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    //
+    // BAM_MARKDUP_BQSR subworkflow modules
+    //
+
+    withName: 'GATK4_MARKDUPLICATES' {
+        ext.args = '--ASSUME_SORT_ORDER coordinate --CREATE_INDEX true'
+        ext.prefix = { "${meta.id}.md.bam" }
+        publishDir = [
+            path: { "${params.outdir}/preprocessing/markduplicates" },
+            mode: params.publish_dir_mode,
+            pattern: '*.metrics',
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: 'GATK4_BASERECALIBRATOR' {
+        ext.prefix = { "${meta.id}.md" }
+        publishDir = [
+            path: { "${params.outdir}/preprocessing/recalibration" },
+            mode: params.publish_dir_mode,
+            pattern: '*.table',
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: 'GATK4_APPLYBQSR' {
+        ext.prefix = { "${meta.id}.md.recal" }
+        ext.suffix = 'bam'  // Output BAM instead of CRAM
+        publishDir = [
+            path: { "${params.outdir}/preprocessing/recalibrated" },
+            mode: params.publish_dir_mode,
+            pattern: '*.{bam,bai}',
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: 'MOSDEPTH' {
+        ext.args = '--fast-mode'  // Skip per-base depth for speed
+        publishDir = [
+            path: { "${params.outdir}/reports/mosdepth" },
+            mode: params.publish_dir_mode,
             saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
         ]
     }
