--- a/conf/test.config
+++ b/conf/test.config
@@ -28,4 +28,8 @@ params {
     // Small chr22 reference from nf-core test-datasets (builds index on-the-fly)
     fasta  = "https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/genome.fasta"
     genome = null
+
+    // Known sites for BQSR - using dbSNP from test-datasets (may have few overlaps with small test region)
+    known_sites     = "https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/vcf/dbsnp_146.hg38.vcf.gz"
+    known_sites_tbi = "https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/vcf/dbsnp_146.hg38.vcf.gz.tbi"
 }
