--- a/nextflow.config
+++ b/nextflow.config
@@ -18,6 +18,17 @@ params {
     igenomes_base              = 's3://ngi-igenomes/igenomes/'
     igenomes_ignore            = false
 
+    // Reference files for BQSR (can be provided directly or will be generated)
+    fasta_fai                  = null  // FASTA index (.fai)
+    dict                       = null  // Sequence dictionary (.dict)
+    known_sites                = null  // Known sites VCF for BQSR (dbSNP, Mills indels)
+    known_sites_tbi            = null  // Known sites VCF index (.tbi)
+    intervals                  = null  // Target regions BED file (optional)
+
+    // Skip options
+    skip_markduplicates        = false
+    skip_bqsr                  = false
+
     // MultiQC options
     multiqc_config             = null
     multiqc_title              = null
