--- a/conf/modules.config
+++ b/conf/modules.config
@@ -109,4 +109,45 @@ process {
         ]
     }
 
+    //
+    // BAM_VARIANT_CALLING subworkflow modules
+    //
+
+    withName: 'GATK4_MUTECT2' {
+        ext.args = { "--tumor-sample ${meta.id} --normal-sample ${meta.normal_id}" }
+        ext.prefix = { "${meta.id}.mutect2" }
+        publishDir = [
+            path: { "${params.outdir}/variant_calling/mutect2" },
+            mode: params.publish_dir_mode,
+            pattern: '*.{vcf.gz,vcf.gz.tbi,stats}',
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    withName: 'GATK4_FILTERMUTECTCALLS' {
+        ext.prefix = { "${meta.id}.mutect2.filtered" }
+        publishDir = [
+            path: { "${params.outdir}/variant_calling/mutect2" },
+            mode: params.publish_dir_mode,
+            pattern: '*.{vcf.gz,vcf.gz.tbi,filteringStats.tsv}',
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
+    //
+    // BAM_CNV_CALLING subworkflow modules
+    //
+
+    withName: 'CNVKIT_BATCH' {
+        // Use 'hybrid' for targeted/exome (requires --intervals), 'wgs' for whole genome
+        ext.args = { params.intervals ? '--method hybrid --diagram --scatter' : '--method wgs --diagram --scatter' }
+        ext.prefix = { "${meta.id}.cnvkit" }
+        publishDir = [
+            path: { "${params.outdir}/cnv_calling/cnvkit" },
+            mode: params.publish_dir_mode,
+            pattern: '*.{cns,cnr,bed,cnn,pdf,png}',
+            saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
+        ]
+    }
+
 }
