--- a/conf/test.config
+++ b/conf/test.config
@@ -32,4 +32,7 @@ params {
     // Known sites for BQSR - using dbSNP from test-datasets (may have few overlaps with small test region)
     known_sites     = "https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/vcf/dbsnp_146.hg38.vcf.gz"
     known_sites_tbi = "https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/vcf/dbsnp_146.hg38.vcf.gz.tbi"
+
+    // Target regions for CNVkit hybrid mode (more forgiving with sparse test data)
+    intervals = "https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/homo_sapiens/genome/genome.bed"
 }
