--- a/nextflow.config
+++ b/nextflow.config
@@ -25,9 +25,17 @@ params {
     known_sites_tbi            = null  // Known sites VCF index (.tbi)
     intervals                  = null  // Target regions BED file (optional)
 
+    // Variant calling resources (optional)
+    germline_resource          = null  // gnomAD VCF for Mutect2
+    germline_resource_tbi      = null  // gnomAD VCF index (.tbi)
+    panel_of_normals           = null  // Panel of normals VCF for Mutect2
+    panel_of_normals_tbi       = null  // Panel of normals VCF index (.tbi)
+
     // Skip options
     skip_markduplicates        = false
     skip_bqsr                  = false
+    skip_variant_calling       = false
+    skip_cnv_calling           = false
 
     // MultiQC options
     multiqc_config             = null
